# workbench-mvp

./: .gitignore  CLAUDE.md  CODEMAP.md  NOW.md  README.md  mvp-hitlist.md  mypy.ini  project-plan.md  pyproject.toml  pytest.ini  requirements.txt
00-notes/: data_quality.md  dev-notes.md  embeddings.md  notes-template.md  pinecone.md
api/: app.py  demo_ui.md  errors.py  models.py  pipeline.py
api-sandbox/: create_embeds.ipynb  data_quality.py  dev_openai.py  dev_pinecone.py  dev_reddit_api.py  embeddings_dev.py  reddit_data_quality.ipynb  sandbox.py
common/: exceptions.py
config/: config.py  evidence_preview.yaml  logging_config.py  run_config.yaml  settings.py  ssm.py  summarizer_smoke_test.yaml
demo/: app.py  demo_ui.md  pipeline.py
dev_pipeline/: run.py  token_count.py
docs/: concurrency_plan.md  concurrency_results.md  dev-notes.md  error-handling.md  fetch_eval_summary.md  llm_execution_layer.md  llm_summarizer_design.md  llm_synthesis_design.md  log-notes.md  logging.md  manual_smoke_tests.md  observability-implementation.md  parking_lot_refactors.md  reddit-data-pipeline.md  reddit-data-structure.md  reddit_fetcher_baselines.md  reddit_fetcher_design.md  reddit_fetcher_validation.md  refactor-fetcher-plan.md  scripts-overview.md  semantic_ranking.md  system_flow_snapshot.md  testing-guide.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
graph/: prompts.py  schemas.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py
internal/: 01-full-mvp-plan.md  (+6 more)
(+181 files in other folders)
